# Health-chain-stellar

./: package-lock.json
backend/: package-lock.json  package.json
backend/src/: app.module.ts
backend/src/blood-requests/: blood-requests.controller.ts  blood-requests.module.ts  blood-requests.service.spec.ts  blood-requests.service.ts
backend/src/inventory/: inventory.module.ts  inventory.service.ts
backend/src/migrations/: 1772000000000-CreateBloodRequestsTables.ts
backend/src/orders/: orders.controller.ts  orders.service.ts
backend/src/soroban/: soroban.service.ts
backend/src/ussd-session/: ussd.controller.ts
contracts/: ISSUE_125_FIX_SUMMARY.md
contracts/fuzz/: Cargo.toml
contracts/fuzz/fuzz_targets/: fuzz_custody_transfer.rs
contracts/src/: constants.rs  lib.rs  registry_read.rs  registry_write.rs  test_storage_layout.rs
contracts/test_snapshots/test/: test_attack_expired_unit_allocated_should_fail.1.json  test_attack_revoked_bank_immediate_reuse_should_fail.1.json  test_attack_unregistered_bank_allocates_blood_should_fail.1.json  test_attack_unregistered_hospital_create_request_should_fail.1.json  test_attack_withdraw_blood_by_unauthorized_address_should_fail.1.json  test_attack_wrong_hospital_confirm_delivery_should_fail.1.json  test_cancel_request_emits_event_with_reason.1.json  test_cancel_request_releases_reservations.1.json  test_create_blood_request_success.1.json  test_create_request_duplicate_request.1.json  test_create_request_emits_event.1.json  (+42 more)
frontend/health-chain/: next.config.ts  package-lock.json  package.json
(+56 files in other folders)
