[package]
name = "healthchain-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[dependencies.health_chain_contract]
path = ".."
package = "healthchain"

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_custody_transfer"
path = "fuzz_targets/fuzz_custody_transfer.rs"
test = false
doc = false
bench = false
